# sadi

./: .release.toml  BRANCHING.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  deny.toml  spellcheck.dic
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: CI.yml  dispatch.yml
.tmp/axum-basic/: Cargo.toml
.tmp/axum-basic/src/: main.rs
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
examples/complex/: Cargo.toml
examples/complex/src/: main.rs
examples/complex/src/core/application/use_case/todo/: create.rs
examples/complex/src/infra/di/: mod.rs
examples/complex/src/infra/persistence/sqlite/: client.rs  mod.rs
examples/complex/src/infra/persistence/sqlite/repository/: todo_sqlite.rs  user_sqlite.rs
roadmaps/: LOCK_FREE_OPERATIONS.md  OBSERVABILITY.md  RESOURCE_LIMIT.md
sadi/: Cargo.toml  README.md
sadi/src/: application.rs  container.rs  error.rs  factory.rs  injectable.rs  injector.rs  instance.rs  lib.rs  macros.rs  module.rs  module_instance.rs  provider.rs  resolve_guard.rs  runtime.rs  sadi.rs  scope.rs  shared.rs  types.rs
src/: lib.rs  sadi.rs
