[workspace]
members = ["sadi", "examples/*"]
default-members = ["sadi"]
resolver = "2"

[workspace.metadata.spellcheck]
config = "spellcheck.toml"

[workspace.package]
version = "0.1.0"
edition = "2024"
repository = "https://github.com/JoaoPedro61/sadi"
homepage = "https://github.com/JoaoPedro61/sadi"
license-file = "LICENSE"
authors = ["João Pedro Martins <mjoaopedro61@gmail.com>"]
