[workspace]
members = ["sadi", "examples/*"]
default-members = ["sadi"]
resolver = "2"

[workspace.metadata.spellcheck]
config = "spellcheck.toml"

[workspace.package]
version = "1.1.1-beta.1"
edition = "2024"
repository = "https://github.com/binary-sea/sadi"
homepage = "https://github.com/binary-sea/sadi"
license-file = "LICENSE"
authors = ["João Pedro Martins <mjoaopedro61@gmail.com>"]
