[package]
name = "sadi"
keywords = ["dependency-injection", "di", "sadi", "semi-automatic", "axum-di"]
description = "Semi-Automatic Dependency Injector"
readme = "README.md"

version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license-file.workspace = true
authors.workspace = true

[dependencies]
tracing = { version = "0.1", optional = true }

[features]
tracing = ["dep:tracing"]
