[package]
name = "complex"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license-file.workspace = true
authors.workspace = true

[lib]
name = "complex"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.89"
sadi = { path = "../../sadi", features = ["debug", "thread-safe"] }
serde = { version = "1.0.228", features = ["derive", "serde_derive"] }
serde_json = "1.0.149"
sqlite = "0.37.0"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
